--- a/assets/css/other.css
+++ b/assets/css/other.css
@@ -1,61 +1,8 @@
-#yModal {
-    display:none;
-    position: fixed;
-    z-index: 1;
-    left:0;
-    top:0;
-    width:100%;
-    height:100%;
-    overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
-    
-}
-
-#yModal .ymodal-title{
-    width:100%;
-    display: right;
-    font-size:20px;
-}
-
-#yModal .ymodal-close {
-    float:right;
-    font-size:20px;
-    padding:5px;
-}
-
-
-
-#yModal .ymodal-content {
-    background-color: #fefefe;
-    margin: 10% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 40%;
-    max-width: 500px;
-    min-width: 300px;
-    border-radius: 5px;
-}
-
-#yModal .ymodal-content .ymodal-button {
-    text-align: center;
-    margin:0 auto;
-}
-
-#yModal .ymodal-title {
-    text-align: center;
-    padding-bottom:20px;
-    font-size: 2rem;
-    font-weight: 800;
-
-}
-
 .table-bordered .thumbnail {
     padding:0px;
     background-color: rgba(0, 0, 0, 0);
     vertical-align: middle;
 }
-
 
 .client-table {
     word-break:break-all;
@@ -97,6 +44,12 @@
     
 }
 
+.modal .context {
+    padding:0;
+    line-height:30px;
+    text-align: right;
+}
+
 .modal .modal-title{
     width:100%;
     display: right;
@@ -135,10 +88,18 @@
     float:left;
 }
 
+.exam-write-menu .left-menu button{
+    float:left;
+}
+
 .exam-write-menu .right-menu {
     float:right;
 }
 
 .exam-write-menu .right-menu input{
+    float:left;
+}
+
+.exam-write-menu .right-menu button{
     float:left;
 }
