--- a/assets/css/other.css
+++ b/assets/css/other.css
@@ -107,9 +107,9 @@
 #uploadfile {
     width: 100%;
     height: 100px;
-    background-color: #003876;
-    border: 1px solid lightgray;
-    border-radius: 3px;
+    background-color: #ECEFF4;
+    border: 2px dashed #A1A7AE;
+    border-radius: 10px;
     margin-top: 10px;
     padding: 0 10px;
     overflow: auto;
@@ -118,21 +118,25 @@
 .upload-area {
     width: 100%;
     height: 100px;
-    background-color: #003876;
-    border: 1px solid lightgray;
-    border-radius: 3px;
+    background-color: #ECEFF4;
+    border: 2px dashed #A1A7AE;
+    border-radius: 10px;
     margin-top: 10px;
     padding: 0 10px;
     overflow: auto;
+    vertical-align: middle;
+
 }
 
 .upload-area p {
+    display: table-cell;
+    width: 100%;
+    vertical-align: middle;
     text-align: center;
-    line-height: 100px;
-    color: #fff;
-    font-size: 16px;
+    color: #6B7076;
+    font-size: 14px;
 }
 
 .file_list li{
-    color:white !important;
+    color:#6B7076 !important;
 }
